# open-guji-cv

./: .gitignore  README.md  border_detect.py  extract_pages.py  install_gpu.bat  install_gpu.sh  lsd_detect.py  output.txt  pyproject.toml  requirements.txt  run_phase5.py  run_table_ocr.py  thought.md
.claude/: CLAUDE.md  backlog.md  settings.json  settings.local.json  todo.md
.claude/doc/: cli_usage.md  design.md  edge_border_analysis.md  jiazhu_detection.md  phase1_analyzers.md  phase1_todo.md  phase2_detectors.md  phase2_preprocessors.md  phase3_char_grid.md  phase3_detectors.md  pipeline.md  s1_crop_spine.md  s2_crop_border.md  s3_enhance_lines.md  s4_deskew.md  s5_split.md  s6_binarize.md  technical_learning.md
.claude/feedback/: README.md  merger_quality_20260226.md  ocr_quality_comprehensive_20260226.md  title_mismatch_deep_dive_20260226.md  unmatched_9_books_deep_analysis_20260226.md
.claude/scripts/: delete_and_rerun.py  diag_border.py  stats_ce.py
.github/workflows/: release.yml
config/dicts/: dict_astro.txt  dict_table_all.txt  dict_weekday.txt  dict_year.txt
data/: README.md
data/book1/: README.md  profile.json
data/book2/: README.md  profile.json
data/book3/: README.md  profile.json
data/book4/: README.md  profile.json
data/book5/: README.md  profile.json
data/book6/: README.md  profile.json
data/book7/: README.md  profile.json
data/book8/: profile.json
doc/: book_profile.md  watermark_removal.md
guji_preprocess/: __main__.py  pipeline.py  profile.py
guji_preprocess/analyzers/: __init__.py  base.py  color_mode.py  interference.py  page_layout.py
open_guji_cv/: __main__.py  pipeline.py  profile.py
open_guji_cv/utils/: viz.py  (+1 more)
packaging/: build.py  ui.spec
scripts/: test_analyze.py  test_grid_match.py
src/: __init__.py  pipeline.py
tests/: test_wm_precise.py
(+114 files in other folders)
